--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ streamlit>=1.28.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.0.0
+python-multipart>=0.0.6
+orjson>=3.9.0
 
 # Visualization
 matplotlib>=3.5.0
@@ -22,7 +24,6 @@ wordcloud>=1.9.0
 # Advanced ML (Optional)
 xgboost>=1.7.0
 shap>=0.42.0
-yellowbrick>=1.5.0
 
 # Utilities
 requests>=2.28.0
