--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 # Core ML and Data Science
-pandas>=1.5.0
-numpy>=1.21.0
-scikit-learn>=1.1.0
-joblib>=1.2.0
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.1.3
+joblib==1.2.0
 
 # Web Frameworks
-streamlit>=1.28.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.0.0
-python-multipart>=0.0.6
-orjson>=3.9.0
+streamlit==1.28.2
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.4.2
+python-multipart==0.0.6
+orjson==3.9.10
 
 # Visualization
-matplotlib>=3.5.0
-seaborn>=0.11.0
+matplotlib==3.6.2
+seaborn==0.12.2
 
 # NLP and Text Processing
-nltk>=3.8.0
-textblob>=0.17.0
-wordcloud>=1.9.0
+nltk==3.8.1
+textblob==0.17.1
+wordcloud==1.9.2
 
-# Advanced ML (Optional)
-xgboost>=1.7.0
-shap>=0.42.0
+# Advanced ML
+xgboost==1.7.6
+shap==0.42.1
 
 # Utilities
-requests>=2.28.0
+requests==2.28.2
 huggingface_hub>=0.20.0
